// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dualAxis 1`] = `
{
  "annotation": {},
  "chartType": "dualAxis",
  "config": {
    "dualAxis": {
      "backgroundColor": "transparent",
      "color": {
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
      },
      "crosshairRect": {
        "labelBackgroundColor": "#364159",
        "labelColor": "#ffffff",
        "labelVisible": true,
        "rectColor": "#3641594d",
        "visible": true,
      },
      "dualChartType": {
        "primary": "column",
        "secondary": "line",
      },
      "label": {
        "enable": true,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelFontColor": "#646A73",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rt",
        "shapeType": "rectRound",
      },
      "primaryYAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridWidth": 0.5,
          "visible": true,
        },
        "inverse": false,
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": false,
        },
        "nice": true,
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
        "zero": true,
      },
      "secondaryYAxis": {
        "grid": {
          "visible": false,
        },
        "inverse": false,
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": false,
        },
        "nice": true,
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
        "zero": true,
      },
      "tooltip": {
        "enable": true,
      },
      "xAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridWidth": 0.5,
          "visible": false,
        },
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "labelAutoHide": true,
        "labelAutoHideGap": 4,
        "labelAutoLimit": true,
        "labelAutoLimitLength": 80,
        "labelAutoRotate": false,
        "labelAutoRotateAngleRange": [
          0,
          -45,
          -90,
        ],
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": true,
        },
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
      },
    },
  },
  "customTheme": {
    "config": {
      "dualAxis": {
        "backgroundColor": "transparent",
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
        },
        "crosshairRect": {
          "labelBackgroundColor": "#364159",
          "labelColor": "#ffffff",
          "labelVisible": true,
          "rectColor": "#3641594d",
          "visible": true,
        },
        "dualChartType": {
          "primary": "column",
          "secondary": "line",
        },
        "label": {
          "enable": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelFontColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "primaryYAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridWidth": 0.5,
            "visible": true,
          },
          "inverse": false,
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": false,
          },
          "nice": true,
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
          "zero": true,
        },
        "secondaryYAxis": {
          "grid": {
            "visible": false,
          },
          "inverse": false,
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": false,
          },
          "nice": true,
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
          "zero": true,
        },
        "tooltip": {
          "enable": true,
        },
        "xAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridWidth": 0.5,
            "visible": false,
          },
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "labelAutoHide": true,
          "labelAutoHideGap": 4,
          "labelAutoLimit": true,
          "labelAutoLimitLength": 80,
          "labelAutoRotate": false,
          "labelAutoRotateAngleRange": [
            0,
            -45,
            -90,
          ],
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": true,
          },
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
        },
      },
    },
  },
  "dataset": [
    [
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "2019-profit",
        "__Dim_X__": "Jan",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaPrimaryValue__": 10000,
        "__OriginalData__": {
          "discount": 0.5,
          "month": "Jan",
          "profit": 10000,
          "sales": 200000,
          "year": "2019",
        },
        "discount": 0.5,
        "month": "Jan",
        "profit": 10000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "2019-sales",
        "__Dim_X__": "Jan",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaPrimaryValue__": 200000,
        "__OriginalData__": {
          "discount": 0.5,
          "month": "Jan",
          "profit": 10000,
          "sales": 200000,
          "year": "2019",
        },
        "discount": 0.5,
        "month": "Jan",
        "sales": 200000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "2019-profit",
        "__Dim_X__": "Feb",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaPrimaryValue__": 20000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Feb",
          "profit": 20000,
          "sales": 400000,
          "year": "2019",
        },
        "discount": 0.2,
        "month": "Feb",
        "profit": 20000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "2019-sales",
        "__Dim_X__": "Feb",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaPrimaryValue__": 400000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Feb",
          "profit": 20000,
          "sales": 400000,
          "year": "2019",
        },
        "discount": 0.2,
        "month": "Feb",
        "sales": 400000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "2019-profit",
        "__Dim_X__": "Mar",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaPrimaryValue__": 30000,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Mar",
          "profit": 30000,
          "sales": 600000,
          "year": "2019",
        },
        "discount": 0.4,
        "month": "Mar",
        "profit": 30000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "2019-sales",
        "__Dim_X__": "Mar",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaPrimaryValue__": 600000,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Mar",
          "profit": 30000,
          "sales": 600000,
          "year": "2019",
        },
        "discount": 0.4,
        "month": "Mar",
        "sales": 600000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "2019-profit",
        "__Dim_X__": "Apr",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaPrimaryValue__": 40000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Apr",
          "profit": 40000,
          "sales": 800000,
          "year": "2019",
        },
        "discount": 0.2,
        "month": "Apr",
        "profit": 40000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "2019-sales",
        "__Dim_X__": "Apr",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaPrimaryValue__": 800000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Apr",
          "profit": 40000,
          "sales": 800000,
          "year": "2019",
        },
        "discount": 0.2,
        "month": "Apr",
        "sales": 800000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "2019-profit",
        "__Dim_X__": "May",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaPrimaryValue__": 50000,
        "__OriginalData__": {
          "discount": 0.05,
          "month": "May",
          "profit": 50000,
          "sales": 1000000,
          "year": "2019",
        },
        "discount": 0.05,
        "month": "May",
        "profit": 50000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "2019-sales",
        "__Dim_X__": "May",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaPrimaryValue__": 1000000,
        "__OriginalData__": {
          "discount": 0.05,
          "month": "May",
          "profit": 50000,
          "sales": 1000000,
          "year": "2019",
        },
        "discount": 0.05,
        "month": "May",
        "sales": 1000000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "2019-profit",
        "__Dim_X__": "Jun",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaPrimaryValue__": 60000,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Jun",
          "profit": 60000,
          "sales": 1200000,
          "year": "2019",
        },
        "discount": 0.3,
        "month": "Jun",
        "profit": 60000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "2019-sales",
        "__Dim_X__": "Jun",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaPrimaryValue__": 1200000,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Jun",
          "profit": 60000,
          "sales": 1200000,
          "year": "2019",
        },
        "discount": 0.3,
        "month": "Jun",
        "sales": 1200000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "2020-profit",
        "__Dim_X__": "Jan",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaPrimaryValue__": 10000,
        "__OriginalData__": {
          "discount": 0.5,
          "month": "Jan",
          "profit": 10000,
          "sales": 200000,
          "year": "2020",
        },
        "discount": 0.5,
        "month": "Jan",
        "profit": 10000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "2020-sales",
        "__Dim_X__": "Jan",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaPrimaryValue__": 200000,
        "__OriginalData__": {
          "discount": 0.5,
          "month": "Jan",
          "profit": 10000,
          "sales": 200000,
          "year": "2020",
        },
        "discount": 0.5,
        "month": "Jan",
        "sales": 200000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "2020-profit",
        "__Dim_X__": "Feb",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaPrimaryValue__": 20000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Feb",
          "profit": 20000,
          "sales": 400000,
          "year": "2020",
        },
        "discount": 0.2,
        "month": "Feb",
        "profit": 20000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "2020-sales",
        "__Dim_X__": "Feb",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaPrimaryValue__": 400000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Feb",
          "profit": 20000,
          "sales": 400000,
          "year": "2020",
        },
        "discount": 0.2,
        "month": "Feb",
        "sales": 400000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "2020-profit",
        "__Dim_X__": "Mar",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaPrimaryValue__": 30000,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Mar",
          "profit": 30000,
          "sales": 600000,
          "year": "2020",
        },
        "discount": 0.4,
        "month": "Mar",
        "profit": 30000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "2020-sales",
        "__Dim_X__": "Mar",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaPrimaryValue__": 600000,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Mar",
          "profit": 30000,
          "sales": 600000,
          "year": "2020",
        },
        "discount": 0.4,
        "month": "Mar",
        "sales": 600000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "2020-profit",
        "__Dim_X__": "Apr",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaPrimaryValue__": 40000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Apr",
          "profit": 40000,
          "sales": 800000,
          "year": "2020",
        },
        "discount": 0.2,
        "month": "Apr",
        "profit": 40000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "2020-sales",
        "__Dim_X__": "Apr",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaPrimaryValue__": 800000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Apr",
          "profit": 40000,
          "sales": 800000,
          "year": "2020",
        },
        "discount": 0.2,
        "month": "Apr",
        "sales": 800000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "2020-profit",
        "__Dim_X__": "May",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaPrimaryValue__": 50000,
        "__OriginalData__": {
          "discount": 0.05,
          "month": "May",
          "profit": 50000,
          "sales": 1000000,
          "year": "2020",
        },
        "discount": 0.05,
        "month": "May",
        "profit": 50000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "2020-sales",
        "__Dim_X__": "May",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaPrimaryValue__": 1000000,
        "__OriginalData__": {
          "discount": 0.05,
          "month": "May",
          "profit": 50000,
          "sales": 1000000,
          "year": "2020",
        },
        "discount": 0.05,
        "month": "May",
        "sales": 1000000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "profit-profit",
        "__Dim_Color__": "profit",
        "__Dim_Detail__": "2020-profit",
        "__Dim_X__": "Jun",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaPrimaryValue__": 60000,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Jun",
          "profit": 60000,
          "sales": 1200000,
          "year": "2020",
        },
        "discount": 0.3,
        "month": "Jun",
        "profit": 60000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "sales-sales",
        "__Dim_Color__": "sales",
        "__Dim_Detail__": "2020-sales",
        "__Dim_X__": "Jun",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaPrimaryValue__": 1200000,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Jun",
          "profit": 60000,
          "sales": 1200000,
          "year": "2020",
        },
        "discount": 0.3,
        "month": "Jun",
        "sales": 1200000,
        "year": "2020",
      },
    ],
    [
      {
        "__Dim_ColorId__": "discount-discount",
        "__Dim_Color__": "discount",
        "__Dim_Detail__": "2019-discount",
        "__Dim_X__": "Jan",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaSecondaryValue__": 0.5,
        "__OriginalData__": {
          "discount": 0.5,
          "month": "Jan",
          "profit": 10000,
          "sales": 200000,
          "year": "2019",
        },
        "discount": 0.5,
        "month": "Jan",
        "profit": 10000,
        "sales": 200000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "discount-discount",
        "__Dim_Color__": "discount",
        "__Dim_Detail__": "2019-discount",
        "__Dim_X__": "Feb",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaSecondaryValue__": 0.2,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Feb",
          "profit": 20000,
          "sales": 400000,
          "year": "2019",
        },
        "discount": 0.2,
        "month": "Feb",
        "profit": 20000,
        "sales": 400000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "discount-discount",
        "__Dim_Color__": "discount",
        "__Dim_Detail__": "2019-discount",
        "__Dim_X__": "Mar",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaSecondaryValue__": 0.4,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Mar",
          "profit": 30000,
          "sales": 600000,
          "year": "2019",
        },
        "discount": 0.4,
        "month": "Mar",
        "profit": 30000,
        "sales": 600000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "discount-discount",
        "__Dim_Color__": "discount",
        "__Dim_Detail__": "2019-discount",
        "__Dim_X__": "Apr",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaSecondaryValue__": 0.2,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Apr",
          "profit": 40000,
          "sales": 800000,
          "year": "2019",
        },
        "discount": 0.2,
        "month": "Apr",
        "profit": 40000,
        "sales": 800000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "discount-discount",
        "__Dim_Color__": "discount",
        "__Dim_Detail__": "2019-discount",
        "__Dim_X__": "May",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaSecondaryValue__": 0.05,
        "__OriginalData__": {
          "discount": 0.05,
          "month": "May",
          "profit": 50000,
          "sales": 1000000,
          "year": "2019",
        },
        "discount": 0.05,
        "month": "May",
        "profit": 50000,
        "sales": 1000000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "discount-discount",
        "__Dim_Color__": "discount",
        "__Dim_Detail__": "2019-discount",
        "__Dim_X__": "Jun",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaSecondaryValue__": 0.3,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Jun",
          "profit": 60000,
          "sales": 1200000,
          "year": "2019",
        },
        "discount": 0.3,
        "month": "Jun",
        "profit": 60000,
        "sales": 1200000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "discount-discount",
        "__Dim_Color__": "discount",
        "__Dim_Detail__": "2020-discount",
        "__Dim_X__": "Jan",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaSecondaryValue__": 0.5,
        "__OriginalData__": {
          "discount": 0.5,
          "month": "Jan",
          "profit": 10000,
          "sales": 200000,
          "year": "2020",
        },
        "discount": 0.5,
        "month": "Jan",
        "profit": 10000,
        "sales": 200000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "discount-discount",
        "__Dim_Color__": "discount",
        "__Dim_Detail__": "2020-discount",
        "__Dim_X__": "Feb",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaSecondaryValue__": 0.2,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Feb",
          "profit": 20000,
          "sales": 400000,
          "year": "2020",
        },
        "discount": 0.2,
        "month": "Feb",
        "profit": 20000,
        "sales": 400000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "discount-discount",
        "__Dim_Color__": "discount",
        "__Dim_Detail__": "2020-discount",
        "__Dim_X__": "Mar",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaSecondaryValue__": 0.4,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Mar",
          "profit": 30000,
          "sales": 600000,
          "year": "2020",
        },
        "discount": 0.4,
        "month": "Mar",
        "profit": 30000,
        "sales": 600000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "discount-discount",
        "__Dim_Color__": "discount",
        "__Dim_Detail__": "2020-discount",
        "__Dim_X__": "Apr",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaSecondaryValue__": 0.2,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Apr",
          "profit": 40000,
          "sales": 800000,
          "year": "2020",
        },
        "discount": 0.2,
        "month": "Apr",
        "profit": 40000,
        "sales": 800000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "discount-discount",
        "__Dim_Color__": "discount",
        "__Dim_Detail__": "2020-discount",
        "__Dim_X__": "May",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaSecondaryValue__": 0.05,
        "__OriginalData__": {
          "discount": 0.05,
          "month": "May",
          "profit": 50000,
          "sales": 1000000,
          "year": "2020",
        },
        "discount": 0.05,
        "month": "May",
        "profit": 50000,
        "sales": 1000000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "discount-discount",
        "__Dim_Color__": "discount",
        "__Dim_Detail__": "2020-discount",
        "__Dim_X__": "Jun",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaSecondaryValue__": 0.3,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Jun",
          "profit": 60000,
          "sales": 1200000,
          "year": "2020",
        },
        "discount": 0.3,
        "month": "Jun",
        "profit": 60000,
        "sales": 1200000,
        "year": "2020",
      },
    ],
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "foldMap": {
          "profit": undefined,
          "sales": undefined,
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureValue": "__MeaPrimaryValue__",
      },
      "foldInfoList": [
        {
          "foldMap": {
            "profit": undefined,
            "sales": undefined,
          },
          "measureId": "__MeaId__",
          "measureName": "__MeaName__",
          "measureValue": "__MeaPrimaryValue__",
        },
        {
          "foldMap": {
            "discount": undefined,
          },
          "measureId": "__MeaId__",
          "measureName": "__MeaName__",
          "measureValue": "__MeaSecondaryValue__",
        },
      ],
      "id": "dualAxis",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {
          "discount-discount": "discount",
          "profit-profit": "profit",
          "sales-sales": "sales",
        },
        "colorItems": [
          "profit-profit",
          "sales-sales",
          "discount-discount",
        ],
        "encodingAngle": "__Dim_Angle__",
        "encodingColor": "__Dim_Color__",
        "encodingColorId": "__Dim_ColorId__",
        "encodingDetail": "__Dim_Detail__",
        "encodingX": "__Dim_X__",
        "encodingY": "__Dim_Y__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "Month",
      "id": "month",
      "location": "dimension",
    },
    {
      "alias": "Year",
      "id": "year",
      "location": "dimension",
    },
    {
      "alias": "指标名称",
      "id": "__MeaName__",
    },
  ],
  "encoding": {
    "color": [
      "__MeaName__",
    ],
    "detail": [
      "__MeaName__",
      "year",
    ],
    "x": [
      "month",
    ],
  },
  "locale": "zh-CN",
  "markStyle": {},
  "measures": [
    {
      "alias": "profit,sales",
      "children": [
        {
          "id": "profit",
        },
        {
          "id": "sales",
        },
      ],
      "id": "0-primary",
    },
    {
      "alias": "discount",
      "children": [
        {
          "id": "discount",
        },
      ],
      "id": "0-secondary",
    },
  ],
}
`;

exports[`dualAxis 2`] = `
{
  "axes": [
    {
      "domainLine": {
        "style": {
          "lineWidth": 1,
          "stroke": "#3641594d",
        },
        "visible": true,
      },
      "grid": {
        "style": {
          "lineWidth": 0.5,
          "stroke": "#36415926",
        },
        "visible": false,
      },
      "hover": true,
      "label": {
        "autoHide": true,
        "autoHideMethod": "greedy",
        "autoHideSeparation": 4,
        "autoLimit": true,
        "autoRotate": false,
        "autoRotateAngle": [
          0,
          -45,
          -90,
        ],
        "flush": true,
        "lastVisible": true,
        "minGap": 4,
        "space": 8,
        "style": {
          "angle": 0,
          "fill": "#797B85",
          "fontSize": 12,
          "fontWeight": 400,
          "maxLineWidth": 80,
        },
        "visible": true,
      },
      "maxHeight": 140,
      "orient": "bottom",
      "paddingInner": [
        0.15,
        0.1,
      ],
      "paddingOuter": [
        0.075,
        0.1,
      ],
      "sampling": false,
      "tick": {
        "inside": false,
        "style": {
          "stroke": "#3641594d",
        },
        "tickSize": 4,
        "visible": false,
      },
      "title": {
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "text": "",
        "visible": false,
      },
      "type": "band",
      "visible": true,
    },
    {
      "base": 10,
      "domainLine": {
        "style": {
          "lineWidth": 1,
          "stroke": "#3641594d",
        },
        "visible": false,
      },
      "grid": {
        "style": {
          "lineWidth": 0.5,
          "stroke": "#36415926",
        },
        "visible": true,
      },
      "id": "dualAxis-primary-axis",
      "innerOffset": {
        "top": 7,
      },
      "inverse": false,
      "label": {
        "formatMethod": [Function],
        "style": {
          "angle": 0,
          "fill": "#797B85",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "visible": true,
      },
      "max": undefined,
      "min": undefined,
      "nice": true,
      "orient": "left",
      "seriesId": "dualAxis-primary-series",
      "tick": {
        "inside": false,
        "style": {
          "stroke": "#3641594d",
        },
        "tickSize": 4,
        "visible": false,
      },
      "title": {
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "text": "",
        "visible": false,
      },
      "type": "linear",
      "visible": true,
      "zero": true,
    },
    {
      "base": 10,
      "domainLine": {
        "style": {
          "lineWidth": 1,
          "stroke": "#3641594d",
        },
        "visible": false,
      },
      "grid": {
        "style": {
          "lineWidth": undefined,
          "stroke": undefined,
        },
        "visible": false,
      },
      "id": "dualAxis-secondary-axis",
      "innerOffset": {
        "top": 7,
      },
      "inverse": false,
      "label": {
        "formatMethod": [Function],
        "style": {
          "angle": 0,
          "fill": "#797B85",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "visible": true,
      },
      "max": undefined,
      "min": undefined,
      "nice": true,
      "orient": "right",
      "seriesId": "dualAxis-secondary-series",
      "sync": {
        "axisId": "dualAxis-primary-axis",
        "zeroAlign": true,
      },
      "tick": {
        "inside": false,
        "style": {
          "stroke": "#3641594d",
        },
        "tickSize": 4,
        "visible": false,
      },
      "title": {
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "text": "",
        "visible": false,
      },
      "type": "linear",
      "visible": true,
      "zero": true,
    },
  ],
  "background": "transparent",
  "color": {
    "domain": [
      "profit-profit",
      "sales-sales",
      "discount-discount",
    ],
    "range": [
      "#8D72F6",
      "#5766EC",
      "#66A3FE",
      "#51D5E6",
      "#4EC0B3",
      "#F9DF90",
      "#F9AD71",
      "#ED8888",
      "#E9A0C3",
      "#D77DD3",
    ],
    "specified": undefined,
    "type": "ordinal",
  },
  "crosshair": {
    "xField": {
      "label": {
        "labelBackground": {
          "style": {
            "fill": "#364159",
          },
          "visible": true,
        },
        "style": {
          "fill": "#ffffff",
        },
        "visible": true,
      },
      "line": {
        "style": {
          "fill": "#3641594d",
          "lineWidth": 0,
          "opacity": 0.2,
        },
        "type": "rect",
      },
      "visible": true,
    },
  },
  "legends": {
    "autoPage": true,
    "data": [Function],
    "item": {
      "background": {
        "state": {
          "selectedHover": {
            "fill": "#646A73",
            "fillOpacity": 0.05,
          },
        },
      },
      "focus": true,
      "focusIconStyle": {
        "fill": "#646A73",
        "fontWeight": 400,
        "size": 14,
      },
      "label": {
        "formatMethod": [Function],
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
      },
      "maxWidth": "30%",
      "shape": {
        "space": 6,
        "style": {
          "size": 8,
          "symbolType": "rectRound",
        },
      },
    },
    "maxCol": 1,
    "maxRow": 1,
    "orient": "right",
    "padding": 0,
    "position": "start",
    "type": "discrete",
    "visible": true,
  },
  "padding": 0,
  "region": [
    {
      "clip": true,
    },
  ],
  "series": [
    {
      "animation": true,
      "area": {
        "visible": true,
      },
      "bar": {
        "state": {
          "hover": {
            "fillOpacity": 0.6,
          },
        },
        "style": {
          "lineWidth": 1,
        },
      },
      "data": {
        "fields": {
          "__Dim_ColorId__": {
            "sortIndex": 0,
          },
          "__Dim_X__": {
            "sortIndex": 0,
          },
        },
        "id": "dualAxis-primary-dataset",
        "values": [
          {
            "__Dim_ColorId__": "profit-profit",
            "__Dim_Color__": "profit",
            "__Dim_Detail__": "2019-profit",
            "__Dim_X__": "Jan",
            "__MeaId__": "profit",
            "__MeaName__": "profit",
            "__MeaPrimaryValue__": 10000,
            "__OriginalData__": {
              "discount": 0.5,
              "month": "Jan",
              "profit": 10000,
              "sales": 200000,
              "year": "2019",
            },
            "discount": 0.5,
            "month": "Jan",
            "profit": 10000,
            "year": "2019",
          },
          {
            "__Dim_ColorId__": "sales-sales",
            "__Dim_Color__": "sales",
            "__Dim_Detail__": "2019-sales",
            "__Dim_X__": "Jan",
            "__MeaId__": "sales",
            "__MeaName__": "sales",
            "__MeaPrimaryValue__": 200000,
            "__OriginalData__": {
              "discount": 0.5,
              "month": "Jan",
              "profit": 10000,
              "sales": 200000,
              "year": "2019",
            },
            "discount": 0.5,
            "month": "Jan",
            "sales": 200000,
            "year": "2019",
          },
          {
            "__Dim_ColorId__": "profit-profit",
            "__Dim_Color__": "profit",
            "__Dim_Detail__": "2019-profit",
            "__Dim_X__": "Feb",
            "__MeaId__": "profit",
            "__MeaName__": "profit",
            "__MeaPrimaryValue__": 20000,
            "__OriginalData__": {
              "discount": 0.2,
              "month": "Feb",
              "profit": 20000,
              "sales": 400000,
              "year": "2019",
            },
            "discount": 0.2,
            "month": "Feb",
            "profit": 20000,
            "year": "2019",
          },
          {
            "__Dim_ColorId__": "sales-sales",
            "__Dim_Color__": "sales",
            "__Dim_Detail__": "2019-sales",
            "__Dim_X__": "Feb",
            "__MeaId__": "sales",
            "__MeaName__": "sales",
            "__MeaPrimaryValue__": 400000,
            "__OriginalData__": {
              "discount": 0.2,
              "month": "Feb",
              "profit": 20000,
              "sales": 400000,
              "year": "2019",
            },
            "discount": 0.2,
            "month": "Feb",
            "sales": 400000,
            "year": "2019",
          },
          {
            "__Dim_ColorId__": "profit-profit",
            "__Dim_Color__": "profit",
            "__Dim_Detail__": "2019-profit",
            "__Dim_X__": "Mar",
            "__MeaId__": "profit",
            "__MeaName__": "profit",
            "__MeaPrimaryValue__": 30000,
            "__OriginalData__": {
              "discount": 0.4,
              "month": "Mar",
              "profit": 30000,
              "sales": 600000,
              "year": "2019",
            },
            "discount": 0.4,
            "month": "Mar",
            "profit": 30000,
            "year": "2019",
          },
          {
            "__Dim_ColorId__": "sales-sales",
            "__Dim_Color__": "sales",
            "__Dim_Detail__": "2019-sales",
            "__Dim_X__": "Mar",
            "__MeaId__": "sales",
            "__MeaName__": "sales",
            "__MeaPrimaryValue__": 600000,
            "__OriginalData__": {
              "discount": 0.4,
              "month": "Mar",
              "profit": 30000,
              "sales": 600000,
              "year": "2019",
            },
            "discount": 0.4,
            "month": "Mar",
            "sales": 600000,
            "year": "2019",
          },
          {
            "__Dim_ColorId__": "profit-profit",
            "__Dim_Color__": "profit",
            "__Dim_Detail__": "2019-profit",
            "__Dim_X__": "Apr",
            "__MeaId__": "profit",
            "__MeaName__": "profit",
            "__MeaPrimaryValue__": 40000,
            "__OriginalData__": {
              "discount": 0.2,
              "month": "Apr",
              "profit": 40000,
              "sales": 800000,
              "year": "2019",
            },
            "discount": 0.2,
            "month": "Apr",
            "profit": 40000,
            "year": "2019",
          },
          {
            "__Dim_ColorId__": "sales-sales",
            "__Dim_Color__": "sales",
            "__Dim_Detail__": "2019-sales",
            "__Dim_X__": "Apr",
            "__MeaId__": "sales",
            "__MeaName__": "sales",
            "__MeaPrimaryValue__": 800000,
            "__OriginalData__": {
              "discount": 0.2,
              "month": "Apr",
              "profit": 40000,
              "sales": 800000,
              "year": "2019",
            },
            "discount": 0.2,
            "month": "Apr",
            "sales": 800000,
            "year": "2019",
          },
          {
            "__Dim_ColorId__": "profit-profit",
            "__Dim_Color__": "profit",
            "__Dim_Detail__": "2019-profit",
            "__Dim_X__": "May",
            "__MeaId__": "profit",
            "__MeaName__": "profit",
            "__MeaPrimaryValue__": 50000,
            "__OriginalData__": {
              "discount": 0.05,
              "month": "May",
              "profit": 50000,
              "sales": 1000000,
              "year": "2019",
            },
            "discount": 0.05,
            "month": "May",
            "profit": 50000,
            "year": "2019",
          },
          {
            "__Dim_ColorId__": "sales-sales",
            "__Dim_Color__": "sales",
            "__Dim_Detail__": "2019-sales",
            "__Dim_X__": "May",
            "__MeaId__": "sales",
            "__MeaName__": "sales",
            "__MeaPrimaryValue__": 1000000,
            "__OriginalData__": {
              "discount": 0.05,
              "month": "May",
              "profit": 50000,
              "sales": 1000000,
              "year": "2019",
            },
            "discount": 0.05,
            "month": "May",
            "sales": 1000000,
            "year": "2019",
          },
          {
            "__Dim_ColorId__": "profit-profit",
            "__Dim_Color__": "profit",
            "__Dim_Detail__": "2019-profit",
            "__Dim_X__": "Jun",
            "__MeaId__": "profit",
            "__MeaName__": "profit",
            "__MeaPrimaryValue__": 60000,
            "__OriginalData__": {
              "discount": 0.3,
              "month": "Jun",
              "profit": 60000,
              "sales": 1200000,
              "year": "2019",
            },
            "discount": 0.3,
            "month": "Jun",
            "profit": 60000,
            "year": "2019",
          },
          {
            "__Dim_ColorId__": "sales-sales",
            "__Dim_Color__": "sales",
            "__Dim_Detail__": "2019-sales",
            "__Dim_X__": "Jun",
            "__MeaId__": "sales",
            "__MeaName__": "sales",
            "__MeaPrimaryValue__": 1200000,
            "__OriginalData__": {
              "discount": 0.3,
              "month": "Jun",
              "profit": 60000,
              "sales": 1200000,
              "year": "2019",
            },
            "discount": 0.3,
            "month": "Jun",
            "sales": 1200000,
            "year": "2019",
          },
          {
            "__Dim_ColorId__": "profit-profit",
            "__Dim_Color__": "profit",
            "__Dim_Detail__": "2020-profit",
            "__Dim_X__": "Jan",
            "__MeaId__": "profit",
            "__MeaName__": "profit",
            "__MeaPrimaryValue__": 10000,
            "__OriginalData__": {
              "discount": 0.5,
              "month": "Jan",
              "profit": 10000,
              "sales": 200000,
              "year": "2020",
            },
            "discount": 0.5,
            "month": "Jan",
            "profit": 10000,
            "year": "2020",
          },
          {
            "__Dim_ColorId__": "sales-sales",
            "__Dim_Color__": "sales",
            "__Dim_Detail__": "2020-sales",
            "__Dim_X__": "Jan",
            "__MeaId__": "sales",
            "__MeaName__": "sales",
            "__MeaPrimaryValue__": 200000,
            "__OriginalData__": {
              "discount": 0.5,
              "month": "Jan",
              "profit": 10000,
              "sales": 200000,
              "year": "2020",
            },
            "discount": 0.5,
            "month": "Jan",
            "sales": 200000,
            "year": "2020",
          },
          {
            "__Dim_ColorId__": "profit-profit",
            "__Dim_Color__": "profit",
            "__Dim_Detail__": "2020-profit",
            "__Dim_X__": "Feb",
            "__MeaId__": "profit",
            "__MeaName__": "profit",
            "__MeaPrimaryValue__": 20000,
            "__OriginalData__": {
              "discount": 0.2,
              "month": "Feb",
              "profit": 20000,
              "sales": 400000,
              "year": "2020",
            },
            "discount": 0.2,
            "month": "Feb",
            "profit": 20000,
            "year": "2020",
          },
          {
            "__Dim_ColorId__": "sales-sales",
            "__Dim_Color__": "sales",
            "__Dim_Detail__": "2020-sales",
            "__Dim_X__": "Feb",
            "__MeaId__": "sales",
            "__MeaName__": "sales",
            "__MeaPrimaryValue__": 400000,
            "__OriginalData__": {
              "discount": 0.2,
              "month": "Feb",
              "profit": 20000,
              "sales": 400000,
              "year": "2020",
            },
            "discount": 0.2,
            "month": "Feb",
            "sales": 400000,
            "year": "2020",
          },
          {
            "__Dim_ColorId__": "profit-profit",
            "__Dim_Color__": "profit",
            "__Dim_Detail__": "2020-profit",
            "__Dim_X__": "Mar",
            "__MeaId__": "profit",
            "__MeaName__": "profit",
            "__MeaPrimaryValue__": 30000,
            "__OriginalData__": {
              "discount": 0.4,
              "month": "Mar",
              "profit": 30000,
              "sales": 600000,
              "year": "2020",
            },
            "discount": 0.4,
            "month": "Mar",
            "profit": 30000,
            "year": "2020",
          },
          {
            "__Dim_ColorId__": "sales-sales",
            "__Dim_Color__": "sales",
            "__Dim_Detail__": "2020-sales",
            "__Dim_X__": "Mar",
            "__MeaId__": "sales",
            "__MeaName__": "sales",
            "__MeaPrimaryValue__": 600000,
            "__OriginalData__": {
              "discount": 0.4,
              "month": "Mar",
              "profit": 30000,
              "sales": 600000,
              "year": "2020",
            },
            "discount": 0.4,
            "month": "Mar",
            "sales": 600000,
            "year": "2020",
          },
          {
            "__Dim_ColorId__": "profit-profit",
            "__Dim_Color__": "profit",
            "__Dim_Detail__": "2020-profit",
            "__Dim_X__": "Apr",
            "__MeaId__": "profit",
            "__MeaName__": "profit",
            "__MeaPrimaryValue__": 40000,
            "__OriginalData__": {
              "discount": 0.2,
              "month": "Apr",
              "profit": 40000,
              "sales": 800000,
              "year": "2020",
            },
            "discount": 0.2,
            "month": "Apr",
            "profit": 40000,
            "year": "2020",
          },
          {
            "__Dim_ColorId__": "sales-sales",
            "__Dim_Color__": "sales",
            "__Dim_Detail__": "2020-sales",
            "__Dim_X__": "Apr",
            "__MeaId__": "sales",
            "__MeaName__": "sales",
            "__MeaPrimaryValue__": 800000,
            "__OriginalData__": {
              "discount": 0.2,
              "month": "Apr",
              "profit": 40000,
              "sales": 800000,
              "year": "2020",
            },
            "discount": 0.2,
            "month": "Apr",
            "sales": 800000,
            "year": "2020",
          },
          {
            "__Dim_ColorId__": "profit-profit",
            "__Dim_Color__": "profit",
            "__Dim_Detail__": "2020-profit",
            "__Dim_X__": "May",
            "__MeaId__": "profit",
            "__MeaName__": "profit",
            "__MeaPrimaryValue__": 50000,
            "__OriginalData__": {
              "discount": 0.05,
              "month": "May",
              "profit": 50000,
              "sales": 1000000,
              "year": "2020",
            },
            "discount": 0.05,
            "month": "May",
            "profit": 50000,
            "year": "2020",
          },
          {
            "__Dim_ColorId__": "sales-sales",
            "__Dim_Color__": "sales",
            "__Dim_Detail__": "2020-sales",
            "__Dim_X__": "May",
            "__MeaId__": "sales",
            "__MeaName__": "sales",
            "__MeaPrimaryValue__": 1000000,
            "__OriginalData__": {
              "discount": 0.05,
              "month": "May",
              "profit": 50000,
              "sales": 1000000,
              "year": "2020",
            },
            "discount": 0.05,
            "month": "May",
            "sales": 1000000,
            "year": "2020",
          },
          {
            "__Dim_ColorId__": "profit-profit",
            "__Dim_Color__": "profit",
            "__Dim_Detail__": "2020-profit",
            "__Dim_X__": "Jun",
            "__MeaId__": "profit",
            "__MeaName__": "profit",
            "__MeaPrimaryValue__": 60000,
            "__OriginalData__": {
              "discount": 0.3,
              "month": "Jun",
              "profit": 60000,
              "sales": 1200000,
              "year": "2020",
            },
            "discount": 0.3,
            "month": "Jun",
            "profit": 60000,
            "year": "2020",
          },
          {
            "__Dim_ColorId__": "sales-sales",
            "__Dim_Color__": "sales",
            "__Dim_Detail__": "2020-sales",
            "__Dim_X__": "Jun",
            "__MeaId__": "sales",
            "__MeaName__": "sales",
            "__MeaPrimaryValue__": 1200000,
            "__OriginalData__": {
              "discount": 0.3,
              "month": "Jun",
              "profit": 60000,
              "sales": 1200000,
              "year": "2020",
            },
            "discount": 0.3,
            "month": "Jun",
            "sales": 1200000,
            "year": "2020",
          },
        ],
      },
      "direction": "vertical",
      "id": "dualAxis-primary-series",
      "label": {
        "formatMethod": [Function],
        "visible": true,
      },
      "point": {
        "state": {
          "dimension_hover": {
            "outerBorder": {
              "distance": 2,
              "lineWidth": 4,
              "strokeOpacity": 0.25,
            },
            "scaleX": 1.4,
            "scaleY": 1.4,
          },
        },
      },
      "seriesField": "__Dim_ColorId__",
      "tooltip": {
        "dimension": {
          "content": [
            {
              "key": [Function],
              "shapeType": "rectRound",
              "value": [Function],
              "visible": true,
            },
          ],
        },
        "mark": {
          "content": [
            {
              "hasShape": true,
              "key": [Function],
              "shapeType": "rectRound",
              "value": [Function],
              "visible": true,
            },
            {
              "hasShape": true,
              "key": [Function],
              "shapeType": "rectRound",
              "value": [Function],
              "visible": true,
            },
            {
              "hasShape": true,
              "key": [Function],
              "shapeType": "rectRound",
              "value": [Function],
              "visible": true,
            },
            {
              "hasShape": true,
              "key": [Function],
              "value": [Function],
              "visible": true,
            },
          ],
          "title": {
            "visible": true,
          },
        },
        "visible": true,
      },
      "type": "bar",
      "xField": "__Dim_X__",
      "yField": "__MeaPrimaryValue__",
      "zIndex": 1000,
    },
    {
      "animation": true,
      "area": {
        "visible": true,
      },
      "bar": {
        "state": {
          "hover": {
            "fillOpacity": 0.6,
          },
        },
        "style": {
          "lineWidth": 1,
        },
      },
      "data": {
        "fields": {
          "__Dim_ColorId__": {
            "sortIndex": 0,
          },
          "__Dim_X__": {
            "sortIndex": 0,
          },
        },
        "id": "dualAxis-secondary-dataset",
        "values": [
          {
            "__Dim_ColorId__": "discount-discount",
            "__Dim_Color__": "discount",
            "__Dim_Detail__": "2019-discount",
            "__Dim_X__": "Jan",
            "__MeaId__": "discount",
            "__MeaName__": "discount",
            "__MeaSecondaryValue__": 0.5,
            "__OriginalData__": {
              "discount": 0.5,
              "month": "Jan",
              "profit": 10000,
              "sales": 200000,
              "year": "2019",
            },
            "discount": 0.5,
            "month": "Jan",
            "profit": 10000,
            "sales": 200000,
            "year": "2019",
          },
          {
            "__Dim_ColorId__": "discount-discount",
            "__Dim_Color__": "discount",
            "__Dim_Detail__": "2019-discount",
            "__Dim_X__": "Feb",
            "__MeaId__": "discount",
            "__MeaName__": "discount",
            "__MeaSecondaryValue__": 0.2,
            "__OriginalData__": {
              "discount": 0.2,
              "month": "Feb",
              "profit": 20000,
              "sales": 400000,
              "year": "2019",
            },
            "discount": 0.2,
            "month": "Feb",
            "profit": 20000,
            "sales": 400000,
            "year": "2019",
          },
          {
            "__Dim_ColorId__": "discount-discount",
            "__Dim_Color__": "discount",
            "__Dim_Detail__": "2019-discount",
            "__Dim_X__": "Mar",
            "__MeaId__": "discount",
            "__MeaName__": "discount",
            "__MeaSecondaryValue__": 0.4,
            "__OriginalData__": {
              "discount": 0.4,
              "month": "Mar",
              "profit": 30000,
              "sales": 600000,
              "year": "2019",
            },
            "discount": 0.4,
            "month": "Mar",
            "profit": 30000,
            "sales": 600000,
            "year": "2019",
          },
          {
            "__Dim_ColorId__": "discount-discount",
            "__Dim_Color__": "discount",
            "__Dim_Detail__": "2019-discount",
            "__Dim_X__": "Apr",
            "__MeaId__": "discount",
            "__MeaName__": "discount",
            "__MeaSecondaryValue__": 0.2,
            "__OriginalData__": {
              "discount": 0.2,
              "month": "Apr",
              "profit": 40000,
              "sales": 800000,
              "year": "2019",
            },
            "discount": 0.2,
            "month": "Apr",
            "profit": 40000,
            "sales": 800000,
            "year": "2019",
          },
          {
            "__Dim_ColorId__": "discount-discount",
            "__Dim_Color__": "discount",
            "__Dim_Detail__": "2019-discount",
            "__Dim_X__": "May",
            "__MeaId__": "discount",
            "__MeaName__": "discount",
            "__MeaSecondaryValue__": 0.05,
            "__OriginalData__": {
              "discount": 0.05,
              "month": "May",
              "profit": 50000,
              "sales": 1000000,
              "year": "2019",
            },
            "discount": 0.05,
            "month": "May",
            "profit": 50000,
            "sales": 1000000,
            "year": "2019",
          },
          {
            "__Dim_ColorId__": "discount-discount",
            "__Dim_Color__": "discount",
            "__Dim_Detail__": "2019-discount",
            "__Dim_X__": "Jun",
            "__MeaId__": "discount",
            "__MeaName__": "discount",
            "__MeaSecondaryValue__": 0.3,
            "__OriginalData__": {
              "discount": 0.3,
              "month": "Jun",
              "profit": 60000,
              "sales": 1200000,
              "year": "2019",
            },
            "discount": 0.3,
            "month": "Jun",
            "profit": 60000,
            "sales": 1200000,
            "year": "2019",
          },
          {
            "__Dim_ColorId__": "discount-discount",
            "__Dim_Color__": "discount",
            "__Dim_Detail__": "2020-discount",
            "__Dim_X__": "Jan",
            "__MeaId__": "discount",
            "__MeaName__": "discount",
            "__MeaSecondaryValue__": 0.5,
            "__OriginalData__": {
              "discount": 0.5,
              "month": "Jan",
              "profit": 10000,
              "sales": 200000,
              "year": "2020",
            },
            "discount": 0.5,
            "month": "Jan",
            "profit": 10000,
            "sales": 200000,
            "year": "2020",
          },
          {
            "__Dim_ColorId__": "discount-discount",
            "__Dim_Color__": "discount",
            "__Dim_Detail__": "2020-discount",
            "__Dim_X__": "Feb",
            "__MeaId__": "discount",
            "__MeaName__": "discount",
            "__MeaSecondaryValue__": 0.2,
            "__OriginalData__": {
              "discount": 0.2,
              "month": "Feb",
              "profit": 20000,
              "sales": 400000,
              "year": "2020",
            },
            "discount": 0.2,
            "month": "Feb",
            "profit": 20000,
            "sales": 400000,
            "year": "2020",
          },
          {
            "__Dim_ColorId__": "discount-discount",
            "__Dim_Color__": "discount",
            "__Dim_Detail__": "2020-discount",
            "__Dim_X__": "Mar",
            "__MeaId__": "discount",
            "__MeaName__": "discount",
            "__MeaSecondaryValue__": 0.4,
            "__OriginalData__": {
              "discount": 0.4,
              "month": "Mar",
              "profit": 30000,
              "sales": 600000,
              "year": "2020",
            },
            "discount": 0.4,
            "month": "Mar",
            "profit": 30000,
            "sales": 600000,
            "year": "2020",
          },
          {
            "__Dim_ColorId__": "discount-discount",
            "__Dim_Color__": "discount",
            "__Dim_Detail__": "2020-discount",
            "__Dim_X__": "Apr",
            "__MeaId__": "discount",
            "__MeaName__": "discount",
            "__MeaSecondaryValue__": 0.2,
            "__OriginalData__": {
              "discount": 0.2,
              "month": "Apr",
              "profit": 40000,
              "sales": 800000,
              "year": "2020",
            },
            "discount": 0.2,
            "month": "Apr",
            "profit": 40000,
            "sales": 800000,
            "year": "2020",
          },
          {
            "__Dim_ColorId__": "discount-discount",
            "__Dim_Color__": "discount",
            "__Dim_Detail__": "2020-discount",
            "__Dim_X__": "May",
            "__MeaId__": "discount",
            "__MeaName__": "discount",
            "__MeaSecondaryValue__": 0.05,
            "__OriginalData__": {
              "discount": 0.05,
              "month": "May",
              "profit": 50000,
              "sales": 1000000,
              "year": "2020",
            },
            "discount": 0.05,
            "month": "May",
            "profit": 50000,
            "sales": 1000000,
            "year": "2020",
          },
          {
            "__Dim_ColorId__": "discount-discount",
            "__Dim_Color__": "discount",
            "__Dim_Detail__": "2020-discount",
            "__Dim_X__": "Jun",
            "__MeaId__": "discount",
            "__MeaName__": "discount",
            "__MeaSecondaryValue__": 0.3,
            "__OriginalData__": {
              "discount": 0.3,
              "month": "Jun",
              "profit": 60000,
              "sales": 1200000,
              "year": "2020",
            },
            "discount": 0.3,
            "month": "Jun",
            "profit": 60000,
            "sales": 1200000,
            "year": "2020",
          },
        ],
      },
      "direction": "vertical",
      "id": "dualAxis-secondary-series",
      "label": {
        "formatMethod": [Function],
        "visible": true,
      },
      "point": {
        "state": {
          "dimension_hover": {
            "outerBorder": {
              "distance": 2,
              "lineWidth": 4,
              "strokeOpacity": 0.25,
            },
            "scaleX": 1.4,
            "scaleY": 1.4,
          },
        },
      },
      "seriesField": "__Dim_ColorId__",
      "tooltip": {
        "dimension": {
          "content": [
            {
              "key": [Function],
              "shapeType": "rectRound",
              "value": [Function],
              "visible": true,
            },
          ],
        },
        "mark": {
          "content": [
            {
              "hasShape": true,
              "key": [Function],
              "shapeType": "rectRound",
              "value": [Function],
              "visible": true,
            },
            {
              "hasShape": true,
              "key": [Function],
              "shapeType": "rectRound",
              "value": [Function],
              "visible": true,
            },
            {
              "hasShape": true,
              "key": [Function],
              "shapeType": "rectRound",
              "value": [Function],
              "visible": true,
            },
            {
              "hasShape": true,
              "key": [Function],
              "value": [Function],
              "visible": true,
            },
          ],
          "title": {
            "visible": true,
          },
        },
        "visible": true,
      },
      "type": "line",
      "xField": "__Dim_X__",
      "yField": "__MeaSecondaryValue__",
      "zIndex": 1001,
    },
  ],
  "type": "common",
}
`;
